library/src/libqtablewidget.h

typedef struct QBrush QBrush;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QSize QSize;
typedef struct QTableWidget QTableWidget;
typedef struct QTableWidgetItem QTableWidgetItem;
typedef struct QTableWidgetSelectionRange QTableWidgetSelectionRange;
typedef struct QVariant QVariant;
QTableWidgetSelectionRange* QTableWidgetSelectionRange_new(QTableWidgetSelectionRange* other);
QTableWidgetSelectionRange* QTableWidgetSelectionRange_new2(QTableWidgetSelectionRange* other);
QTableWidgetSelectionRange* QTableWidgetSelectionRange_new3();
QTableWidgetSelectionRange* QTableWidgetSelectionRange_new4(int top, int left, int bottom, int right);
int QTableWidgetSelectionRange_TopRow(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_BottomRow(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_LeftColumn(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_RightColumn(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_RowCount(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_ColumnCount(const QTableWidgetSelectionRange* self);
QTableWidgetItem* QTableWidgetItem_new();
QTableWidgetItem* QTableWidgetItem_new2(libqt_string text);
QTableWidgetItem* QTableWidgetItem_new3(QIcon* icon, libqt_string text);
QTableWidgetItem* QTableWidgetItem_new4(QTableWidgetItem* other);
QTableWidgetItem* QTableWidgetItem_new5(int typeVal);
QTableWidgetItem* QTableWidgetItem_new6(libqt_string text, int typeVal);
QTableWidgetItem* QTableWidgetItem_new7(QIcon* icon, libqt_string text, int typeVal);
QTableWidgetItem* QTableWidgetItem_Clone(const QTableWidgetItem* self);
QTableWidget* QTableWidgetItem_TableWidget(const QTableWidgetItem* self);
int QTableWidgetItem_Row(const QTableWidgetItem* self);
int QTableWidgetItem_Column(const QTableWidgetItem* self);
void QTableWidgetItem_SetSelected(QTableWidgetItem* self, bool selectVal);
bool QTableWidgetItem_IsSelected(const QTableWidgetItem* self);
int QTableWidgetItem_Flags(const QTableWidgetItem* self);
void QTableWidgetItem_SetFlags(QTableWidgetItem* self, int flags);
libqt_string QTableWidgetItem_Text(const QTableWidgetItem* self);
void QTableWidgetItem_SetText(QTableWidgetItem* self, libqt_string text);
QIcon* QTableWidgetItem_Icon(const QTableWidgetItem* self);
void QTableWidgetItem_SetIcon(QTableWidgetItem* self, QIcon* icon);
libqt_string QTableWidgetItem_StatusTip(const QTableWidgetItem* self);
void QTableWidgetItem_SetStatusTip(QTableWidgetItem* self, libqt_string statusTip);
libqt_string QTableWidgetItem_ToolTip(const QTableWidgetItem* self);
void QTableWidgetItem_SetToolTip(QTableWidgetItem* self, libqt_string toolTip);
libqt_string QTableWidgetItem_WhatsThis(const QTableWidgetItem* self);
void QTableWidgetItem_SetWhatsThis(QTableWidgetItem* self, libqt_string whatsThis);
QFont* QTableWidgetItem_Font(const QTableWidgetItem* self);
void QTableWidgetItem_SetFont(QTableWidgetItem* self, QFont* font);
int QTableWidgetItem_TextAlignment(const QTableWidgetItem* self);
void QTableWidgetItem_SetTextAlignment(QTableWidgetItem* self, int alignment);
void QTableWidgetItem_SetTextAlignmentWithAlignment(QTableWidgetItem* self, int alignment);
void QTableWidgetItem_SetTextAlignment2(QTableWidgetItem* self, int alignment);
QBrush* QTableWidgetItem_Background(const QTableWidgetItem* self);
void QTableWidgetItem_SetBackground(QTableWidgetItem* self, QBrush* brush);
QBrush* QTableWidgetItem_Foreground(const QTableWidgetItem* self);
void QTableWidgetItem_SetForeground(QTableWidgetItem* self, QBrush* brush);
int QTableWidgetItem_CheckState(const QTableWidgetItem* self);
void QTableWidgetItem_SetCheckState(QTableWidgetItem* self, int state);
QSize* QTableWidgetItem_SizeHint(const QTableWidgetItem* self);
void QTableWidgetItem_SetSizeHint(QTableWidgetItem* self, QSize* size);
QVariant* QTableWidgetItem_Data(const QTableWidgetItem* self, int role);
void QTableWidgetItem_SetData(QTableWidgetItem* self, int role, QVariant* value);
bool QTableWidgetItem_OperatorLesser(const QTableWidgetItem* self, QTableWidgetItem* other);
void QTableWidgetItem_Read(QTableWidgetItem* self, QDataStream* in);
void QTableWidgetItem_Write(const QTableWidgetItem* self, QDataStream* out);
void QTableWidgetItem_OperatorAssign(QTableWidgetItem* self, QTableWidgetItem* other);
int QTableWidgetItem_Type(const QTableWidgetItem* self);