src/libqtablewidget.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QTableWidgetItem__ItemType
{
	Type = 0,
	UserType = 1000,
}
public struct QTableWidgetSelectionRange
{
	[LinkName("QTableWidgetSelectionRange_new")]
	public static extern void* QTableWidgetSelectionRange_new(QTableWidgetSelectionRange other);
	[LinkName("QTableWidgetSelectionRange_new2")]
	public static extern void* QTableWidgetSelectionRange_new2(QTableWidgetSelectionRange other);
	[LinkName("QTableWidgetSelectionRange_new3")]
	public static extern void* QTableWidgetSelectionRange_new3();
	[LinkName("QTableWidgetSelectionRange_new4")]
	public static extern void* QTableWidgetSelectionRange_new4(int32 top, int32 left, int32 bottom, int32 right);
	[LinkName("QTableWidgetSelectionRange_TopRow")]
	public static extern int32 QTableWidgetSelectionRange_TopRow(void* c_this);
	[LinkName("QTableWidgetSelectionRange_BottomRow")]
	public static extern int32 QTableWidgetSelectionRange_BottomRow(void* c_this);
	[LinkName("QTableWidgetSelectionRange_LeftColumn")]
	public static extern int32 QTableWidgetSelectionRange_LeftColumn(void* c_this);
	[LinkName("QTableWidgetSelectionRange_RightColumn")]
	public static extern int32 QTableWidgetSelectionRange_RightColumn(void* c_this);
	[LinkName("QTableWidgetSelectionRange_RowCount")]
	public static extern int32 QTableWidgetSelectionRange_RowCount(void* c_this);
	[LinkName("QTableWidgetSelectionRange_ColumnCount")]
	public static extern int32 QTableWidgetSelectionRange_ColumnCount(void* c_this);
}
public struct QTableWidgetItem
{
	[LinkName("QTableWidgetItem_new")]
	public static extern void* QTableWidgetItem_new();
	[LinkName("QTableWidgetItem_new2")]
	public static extern void* QTableWidgetItem_new2(char8[] text);
	[LinkName("QTableWidgetItem_new3")]
	public static extern void* QTableWidgetItem_new3(QIcon icon, char8[] text);
	[LinkName("QTableWidgetItem_new4")]
	public static extern void* QTableWidgetItem_new4(QTableWidgetItem other);
	[LinkName("QTableWidgetItem_new5")]
	public static extern void* QTableWidgetItem_new5(int32 typeVal);
	[LinkName("QTableWidgetItem_new6")]
	public static extern void* QTableWidgetItem_new6(char8[] text, int32 typeVal);
	[LinkName("QTableWidgetItem_new7")]
	public static extern void* QTableWidgetItem_new7(QIcon icon, char8[] text, int32 typeVal);
	[LinkName("QTableWidgetItem_Clone")]
	public static extern QTableWidgetItem QTableWidgetItem_Clone(void* c_this);
	[LinkName("QTableWidgetItem_TableWidget")]
	public static extern QTableWidget QTableWidgetItem_TableWidget(void* c_this);
	[LinkName("QTableWidgetItem_Row")]
	public static extern int32 QTableWidgetItem_Row(void* c_this);
	[LinkName("QTableWidgetItem_Column")]
	public static extern int32 QTableWidgetItem_Column(void* c_this);
	[LinkName("QTableWidgetItem_SetSelected")]
	public static extern void QTableWidgetItem_SetSelected(void* c_this, bool selectVal);
	[LinkName("QTableWidgetItem_IsSelected")]
	public static extern bool QTableWidgetItem_IsSelected(void* c_this);
	[LinkName("QTableWidgetItem_Flags")]
	public static extern int64 QTableWidgetItem_Flags(void* c_this);
	[LinkName("QTableWidgetItem_SetFlags")]
	public static extern void QTableWidgetItem_SetFlags(void* c_this, int64 flags);
	[LinkName("QTableWidgetItem_Text")]
	public static extern char8[] QTableWidgetItem_Text(void* c_this);
	[LinkName("QTableWidgetItem_SetText")]
	public static extern void QTableWidgetItem_SetText(void* c_this, char8[] text);
	[LinkName("QTableWidgetItem_Icon")]
	public static extern QIcon QTableWidgetItem_Icon(void* c_this);
	[LinkName("QTableWidgetItem_SetIcon")]
	public static extern void QTableWidgetItem_SetIcon(void* c_this, QIcon icon);
	[LinkName("QTableWidgetItem_StatusTip")]
	public static extern char8[] QTableWidgetItem_StatusTip(void* c_this);
	[LinkName("QTableWidgetItem_SetStatusTip")]
	public static extern void QTableWidgetItem_SetStatusTip(void* c_this, char8[] statusTip);
	[LinkName("QTableWidgetItem_ToolTip")]
	public static extern char8[] QTableWidgetItem_ToolTip(void* c_this);
	[LinkName("QTableWidgetItem_SetToolTip")]
	public static extern void QTableWidgetItem_SetToolTip(void* c_this, char8[] toolTip);
	[LinkName("QTableWidgetItem_WhatsThis")]
	public static extern char8[] QTableWidgetItem_WhatsThis(void* c_this);
	[LinkName("QTableWidgetItem_SetWhatsThis")]
	public static extern void QTableWidgetItem_SetWhatsThis(void* c_this, char8[] whatsThis);
	[LinkName("QTableWidgetItem_Font")]
	public static extern QFont QTableWidgetItem_Font(void* c_this);
	[LinkName("QTableWidgetItem_SetFont")]
	public static extern void QTableWidgetItem_SetFont(void* c_this, QFont font);
	[LinkName("QTableWidgetItem_TextAlignment")]
	public static extern int32 QTableWidgetItem_TextAlignment(void* c_this);
	[LinkName("QTableWidgetItem_SetTextAlignment")]
	public static extern void QTableWidgetItem_SetTextAlignment(void* c_this, int32 alignment);
	[LinkName("QTableWidgetItem_SetTextAlignmentWithAlignment")]
	public static extern void QTableWidgetItem_SetTextAlignmentWithAlignment(void* c_this, int64 alignment);
	[LinkName("QTableWidgetItem_SetTextAlignment2")]
	public static extern void QTableWidgetItem_SetTextAlignment2(void* c_this, int64 alignment);
	[LinkName("QTableWidgetItem_Background")]
	public static extern QBrush QTableWidgetItem_Background(void* c_this);
	[LinkName("QTableWidgetItem_SetBackground")]
	public static extern void QTableWidgetItem_SetBackground(void* c_this, QBrush brush);
	[LinkName("QTableWidgetItem_Foreground")]
	public static extern QBrush QTableWidgetItem_Foreground(void* c_this);
	[LinkName("QTableWidgetItem_SetForeground")]
	public static extern void QTableWidgetItem_SetForeground(void* c_this, QBrush brush);
	[LinkName("QTableWidgetItem_CheckState")]
	public static extern int64 QTableWidgetItem_CheckState(void* c_this);
	[LinkName("QTableWidgetItem_SetCheckState")]
	public static extern void QTableWidgetItem_SetCheckState(void* c_this, int64 state);
	[LinkName("QTableWidgetItem_SizeHint")]
	public static extern QSize QTableWidgetItem_SizeHint(void* c_this);
	[LinkName("QTableWidgetItem_SetSizeHint")]
	public static extern void QTableWidgetItem_SetSizeHint(void* c_this, QSize size);
	[LinkName("QTableWidgetItem_Data")]
	public static extern QVariant QTableWidgetItem_Data(void* c_this, int32 role);
	[LinkName("QTableWidgetItem_SetData")]
	public static extern void QTableWidgetItem_SetData(void* c_this, int32 role, QVariant value);
	[LinkName("QTableWidgetItem_OperatorLesser")]
	public static extern bool QTableWidgetItem_OperatorLesser(void* c_this, QTableWidgetItem other);
	[LinkName("QTableWidgetItem_Read")]
	public static extern void QTableWidgetItem_Read(void* c_this, QDataStream _in);
	[LinkName("QTableWidgetItem_Write")]
	public static extern void QTableWidgetItem_Write(void* c_this, QDataStream _out);
	[LinkName("QTableWidgetItem_OperatorAssign")]
	public static extern void QTableWidgetItem_OperatorAssign(void* c_this, QTableWidgetItem other);
	[LinkName("QTableWidgetItem_Type")]
	public static extern int32 QTableWidgetItem_Type(void* c_this);
}
